# elms-backend

./: .gitignore  Dockerfile  Pipfile  README.md  fly.toml  manage.py  pyproject.toml  requirements.txt
assignments/: admin.py  models.py  serializers.py  urls.py  views.py
assignments/migrations/: 0001_initial.py
chat/: admin.py  consumers.py  models.py  routing.py  urls.py
chat/api/: serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py
core/: admin.py  emails.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_event.py  0003_user_profile_picture.py  0004_delete_event_user_gaccess_token_user_grefresh_token_and_more.py  0005_merge_20230610_1023.py  0006_creds_remove_user_gaccess_token_and_more.py  0007_remove_user_has_gmail_creds_has_gmail.py  0008_alter_user_creds.py  0009_alter_user_creds.py  0010_remove_user_creds.py
dashboard/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  (+26 more)
elms/: asgi.py  settings.py  urls.py  wsgi.py
events/: admin.py  models.py  serializers.py  serviceAccount.json  urls.py  views.py
quiz/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
quiz_base/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
quizzes/: admin.py  models.py  serializers.py  urls.py  views.py
seeds/: auth_permission.sql  core_user.sql  django_content_type.sql  django_migrations.sql  django_session.sql
(+21 files in other folders)
